# Aug-cfd

./: .gitginore  .gitignore  pyproject.toml
.github/workflows/: ci.yml
aug_cfd/: utils.py
aug_cfd/simulator/: simulator.py  utils_musicaa.py
simulator/: __init__.py
tests/: test_musicaa_simulator.py  test_utils.py  test_utils_musicaa.py
