# pyproject.toml

# This section specifies the build system. Setuptools is a robust and common choice.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# This section defines the core metadata for your project.
[project]
name = "Aug-cfd"
version = "0.1.0"
authors = [
  { name="Louenas Zemmour", email="louenas.zemmour@sorbonne-universite.fr" }, # Please update this
]
description = "A package for CFD augmentation and simulation."
readme = "README.md" # Assumes you have a README.md file
requires-python = ">=3.8"
classifiers = [
    # Find more classifiers at https://pypi.org/classifiers/
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

# List your project's runtime dependencies here.
# pip will automatically install these when your package is installed.
dependencies = [
    "numpy",
    "submitit",
]