# pyproject.toml

# This section specifies the build system. Setuptools is a robust and common choice.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# This section defines the core metadata for the project.
[tool.setuptools]
packages = ["aug_cfd"]

[project]
name = "Aug-cfd"
version = "0.1.0"
authors = [
  { name="Louenas Zemmour", email="louenas.zemmour@sorbonne-universite.fr" }, 
]
description = "A package for CFD augmentation and simulation."
readme = "README.md" # Assuming a README exists
requires-python = ">=3.8"
classifiers = [
    # Find more classifiers at https://pypi.org/classifiers/
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

# Listing project's runtime dependencies here.
dependencies = [
    "numpy",
    "submitit",
    "scipy",
    "ppMusicaa @ git+https://github.com/LouenasZm/ppMusicaa.git"
]